@@ -461,9 +461,9 @@ char *
 NP_GetMIMEDescription (void)
 {
 	/* unfortunately, a lot of win32 servers serving up Adobe content return bogus mime-types... */
-	return ("image/svg+xml:svg:Scalable Vector Graphics;image/svg-xml:svg:Scalable Vector Graphics;"
-			"image/svg:svg:Scalable Vector Graphics;image/vnd.adobe.svg+xml:svg:Scalable Vector Graphics;"
-			"text/xml-svg:svg:Scalable Vector Graphics");
+	return ("image/svg+xml:svg,svgz:Scalable Vector Graphics;image/svg-xml:svg,svgz:Scalable Vector Graphics;"
+			"image/svg:svg,svgz:Scalable Vector Graphics;image/vnd.adobe.svg+xml:svg,svgz:Scalable Vector Graphics;"
+			"text/xml-svg:svg,svgz:Scalable Vector Graphics");
 }
 
 NPError
